Update marketing website

--- a/index_old.html
+++ b/index_old.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Jun 25 2025 13:24:14 GMT+0000 (Coordinated Universal Time)  -->
+
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Tue Dec 12 2023 10:35:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="655f5c6adc15a2985f0aba49" data-wf-site="655f5c6adc15a2985f0aba40">
 <head>
   <meta charset="utf-8">
@@ -23,10 +25,11 @@
   </section>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav w-nav">
     <div class="container w-container">
-      <a href="index.html" aria-current="page" class="w-nav-brand w--current"><img src="images/skmg_logo3.png" loading="lazy" width="166.5" sizes="166.5px" alt="" srcset="images/skmg_logo3-p-500.png 500w, images/skmg_logo3-p-800.png 800w, images/skmg_logo3-p-1080.png 1080w, images/skmg_logo3.png 1498w" class="logo"></a>
+      <a href="index.html" aria-current="page" class="w-nav-brand w--current"><img src="images/skmg_logo3.png" loading="lazy" width="166.5" sizes="(max-width: 479px) 180px, 220px" alt="" srcset="images/skmg_logo3-p-500.png 500w, images/skmg_logo3-p-800.png 800w, images/skmg_logo3-p-1080.png 1080w, images/skmg_logo3.png 1498w" class="logo"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="about.html" class="nav-link w-nav-link">Over Nathan</a>
         <a href="pmf.html" class="nav-link w-nav-link">Product-Market Fit consulting</a>
+        <a href="marketing-websites.html" class="nav-link w-nav-link">Marketing websites</a>
         <a href="mailto:ns@skmg.nl" class="cont-nav-link w-inline-block"><img src="images/envelope.png" loading="lazy" alt="" class="ico">
           <div>Email</div>
         </a>
@@ -44,10 +47,39 @@
       </div>
     </div>
   </section>
-  <section class="section-content"></section>
+  <section class="section-content">
+    <div class="w-layout-blockcontainer container w-container">
+      <div class="w-layout-grid grid">
+        <a href="about.html" class="card-link w-inline-block">
+          <div class="card-service">
+            <div class="card-text">
+              <h4 class="heading">Over Nathan</h4>
+              <p>Nathan bouwde in 1998 zijn eerste web-applicatie en is medeoprichter van o.a. Lexa, Kamernet en Physitrack.</p>
+            </div>
+          </div>
+        </a>
+        <a href="pmf.html" class="card-link w-inline-block">
+          <div class="card-service pmf">
+            <div class="card-text">
+              <h4>Product-Market Fit consulting</h4>
+              <p>Laat SKMG de product-market fit van uw (online) product of dienst vinden of verbeteren.</p>
+            </div>
+          </div>
+        </a>
+        <a href="marketing-websites.html" class="card-link w-inline-block">
+          <div class="card-service online-presence">
+            <div class="card-text">
+              <h4>Marketing websites</h4>
+              <p>SKMG kan de effectiviteit van uw marketing-website analyseren en verbeteren.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
   <section class="footer">
     <div class="w-layout-blockcontainer container w-container">
-      <p>Skylark Media Group (SKMG) BV<br>KvK 20093741 Amsterdam<br>
+      <p>Skylark Media Group (SKMG) BV<br>KvK 20093741 Amsterdam<br>
         <a href="mailto:ns@skmg.nl">ns@skmg.nl</a><br>‍
       </p>
     </div>
